# picture-dir

./: Pipfile  entry_points.cfg  setup.cfg  tox.ini
src/picture_dir/: cli.py  core.py
tests/: test_picture_dir.py
