[metadata]
name = picture_dir
version = attr: picture_dir.__version__
author = TATEISHI Tadatoshi
author_email = ishio39@gmail.com
licence_file = LICENSE

[options]
packages = find:
entry_points = file: entry_points.cfg
package_dir =
    = src
install_requires =
    fire
    pyyaml

[options.packages.find]
where = src
